# radium-test-task

./: CHANGELOG.md  LICENSE  README.md  THIRDPARTYLICENSES  pyproject.toml  setup.cfg
gitea_hash_calculator/: downloader.py  tools.py
tests/: test_tools.py
