[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.poetry]
name = "radium-test-task"
version = "1.0.0"
description = "Test task for Radium."
authors = ["scbeeeop@ya.ru"]

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
colorama = "0.4.6"
idna = "3.4"
iniconfig = "2.0.0"
packaging = "23.1"
pluggy = "1.0.0"
pytest = "7.3.1"
requests = "2.28.2"
urllib3 = "1.26.15"

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = "test*.py"
addopts = "-rsxX -l --tb=short --strict-markers --doctest-modules"
xfail_strict = "true"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
flake8-pytest-style = "^1.3.0"
flake8-SQL = "^0.4.1"
flake8-annotations = "^2.4.1"
flake8-logging-format = "^0.8.1"
flake8-spellcheck = "^0.28.0"
isort = "^5.7.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.5"
Faker = "^15.1.0"
pytest-snapshot = "^0.9.0"

[tool.poetry.group.dev.dependencies.pytest-xdist]
extras = [ "psutil",]
version = "^3.0.2"
